edited signup, login, and style

--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
     <script src="https://kit.fontawesome.com/6563a04357.js" crossorigin="anonymous"></script>
 
 </head>
-<body>
+<body class="login-page">
     <section class="log-in d-flex justify-content-center align-items-center">
         <div class="container">
             <div class="row justify-content-center">
