--- a/sign-up.html
+++ b/sign-up.html
@@ -17,7 +17,7 @@
     <script src="https://kit.fontawesome.com/6563a04357.js" crossorigin="anonymous"></script>
 
 </head>
-<body>
+<body class="signup-page">
     <section class="log-in d-flex justify-content-center align-items-center">
         <div class="container">
             <div class="row justify-content-center">
@@ -31,7 +31,6 @@
                         <div class="col-md-6 p-4">
                             <img src="resource/img/molecules-logo.png" class="logo-img mb-3">
                             <h2 class="greetings fw-bold mb-1">Sign up</h2>
-                            <p class="text-email mb-4 d-flex flex-column align-items-center">Login with Email</p>
                             <form>
                                 <div class="mb-3 text-start input-wrapper">
                                     <label class="label-text">Email:</label>
