added img and texts.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 </head>
 
 <body>
-    <nav class="navbar fixed-top">
+    <!-- navbar -->
+    <nav class="navbar">
         <a class="navbar-brand" href="#">
             <img class="ceu-logo img-fluid" src="./resource/img/ceu-molecules.png"/>
         </a>
@@ -55,12 +56,61 @@
             </ul>
         </div>
     </nav>
+    <!-- navbar end -->
 
-    <main>
+    <!-- home -->
+    <section class="home">
         <div>
+            <div class="row align-items-center">
+                <div class="col-5">
+                    <img src="./resource/img/bg.jpg" alt="ceu-building" class="img-fluid">
+                </div>
+                <div class="col-7">
+                    <h4 class="home-text text-center">CHEMICAL LABORATORY M.O.L.E.C.U.L.E.S</h4>
+                    <p class="text-dark ps-3 pe-3" style="font-size: 0.9rem;">The CEU Malolos MOLECULES is a system developed to make requisition of laboratory materials easier, faster
+                    and more reliable. The system directly sends your requisition form to the CEU Malolos Chemical Laboratory
+                    so you can request materials for your research or lessons anytime, anywhere.You can track your requests
+                    within the system, as well as view your requisition history. <br><br>
 
+                    NOTE: <br>
+                    1. Requests are subject to review by Chemical Laboratory Technicians. <br>
+                    2. Materials are subject to specific lead times in which materials must be requested: <br> Chemicals / Supplies / Models / Charts - 2 days before intended use<br> 
+                    Equipment - On the day of use<br> Specimen for instruction - 1 month before its use<br> Specimen for research - 2 months before its use<br>
+                    3. Any damage/lost material must be replaced or paid at the Cashier’s office before the end of the semester.<br>
+                    4. Personal information, including e-signatures, will be requested by the system in accordance to the university’s policy regarding laboratory material requisition. Personal information will be securely stored by the system with access restricted to authorized personnel only and is governed by strict confidentiality obligations in compliance with the Data Privacy Act of 2012 (Republic Act No. 10173).<br>
+                    5. For student requests, an  e-signature from your subject professor or program head will be required. A copy of your requisition will be sent to them as well.</p>
+                </div>
+                <hr>
+            </div>
+            <div class="container">
+                <div class="row row-cols-5">
+                    <div class="card">
+                        <div class="col">column</div>
+                    </div>
+                    <div class="card">
+                        <div class="col">column</div>
+                    </div>
+                    <div class="card">
+                        <div class="col">column</div>
+                    </div>
+                    <div class="card">
+                        <div class="col">column</div>
+                    </div>
+                    <div class="card">
+                        <div class="col">column</div>
+                    </div>
+
+                    
+                </div>
+            </div>
         </div>
-    </main>
+    </section>
+    <!-- home -->
+
+    <!-- footer -->
+	<footer>
+
+	</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
