--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 
     <!-- home -->
     <section class="home">
-        <div>
-            <div class="row align-items-center">
+        <div class="container-fluid">
+            <div class="row row-no-gutters align-items-center">
                 <div class="col-5">
                     <img src="./resource/img/bg.jpg" alt="ceu-building" class="img-fluid">
                 </div>
                 <div class="col-7">
-                    <h4 class="home-text text-center">CHEMICAL LABORATORY M.O.L.E.C.U.L.E.S</h4>
+                    <h4 class="home-text text-center pt-2">CHEMICAL LABORATORY M.O.L.E.C.U.L.E.S</h4>
                     <p class="text-dark ps-3 pe-3" style="font-size: 0.9rem;">The CEU Malolos MOLECULES is a system developed to make requisition of laboratory materials easier, faster
                     and more reliable. The system directly sends your requisition form to the CEU Malolos Chemical Laboratory
                     so you can request materials for your research or lessons anytime, anywhere.You can track your requests
@@ -82,25 +82,49 @@
                 </div>
                 <hr>
             </div>
-            <div class="container">
-                <div class="row row-cols-5">
-                    <div class="card">
-                        <div class="col">column</div>
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5 g-3"> 
+                <div class="col">
+                    <div class="card home-card">
+                        <div class="card-body text-center d-flex flex-column justify-content-center">
+                            <div class="card-title h1"><i class="fa-solid fa-atom"></i></div>
+                            <div class="card-text pt-2">CHEMICALS</div>
+                        </div>
                     </div>
-                    <div class="card">
-                        <div class="col">column</div>
-                    </div>
-                    <div class="card">
-                        <div class="col">column</div>
-                    </div>
-                    <div class="card">
-                        <div class="col">column</div>
-                    </div>
-                    <div class="card">
-                        <div class="col">column</div>
-                    </div>
+                </div>
 
-                    
+                <div class="col">
+                    <div class="card home-card">
+                        <div class="card-body text-center d-flex flex-column justify-content-center">
+                            <div class="card-title h1"><i class="fa-solid fa-prescription-bottle"></i></div>
+                            <div class="card-text pt-2">SUPPLIES</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card home-card">
+                        <div class="card-body text-center d-flex flex-column justify-content-center">
+                            <div class="card-title h1"><i class="fa-solid fa-diagram-project"></i></div> <div class="card-text pt-2">MODELS/CHARTS</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card home-card">
+                        <div class="card-body text-center d-flex flex-column justify-content-center">
+                            <div class="card-title h1"><i class="fa-solid fa-microscope"></i></div>
+                            <div class="card-text pt-2">EQUIPMENT</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card home-card">
+                        <div class="card-body text-center d-flex flex-column justify-content-center">
+                            <div class="card-title h1"><i class="fa-solid fa-vial"></i></div>
+                            <div class="card-text pt-2">SPECIMENS</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -109,7 +133,14 @@
 
     <!-- footer -->
 	<footer>
-
+        <div class="container-fluid">
+            <p class="text-center text-white pt-2"><small>
+                CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
+                <i class="fa-regular fa-copyright"></i> 2025 Copyright <strong>CENTRO ESCOLAR UNIVERSITY MALOLOS, Chemical Laboratory</strong><br>
+                Developed by <strong>Renz Matthew Magsakay (official.renzmagsakay@gmail.com), Krizia Jane Lleva (lleva2234517@mls.ceu.edu.ph) & Angelique Mae Gabriel (gabriel2231439@mls.ceu.edu.ph)</strong>
+                </small>
+            </p>
+        </div>
 	</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
