--- a/index.html
+++ b/index.html
@@ -82,47 +82,49 @@
                 </div>
                 <hr>
             </div>
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5 g-3"> 
-                <div class="col">
-                    <div class="card home-card">
-                        <div class="card-body text-center d-flex flex-column justify-content-center">
-                            <div class="card-title h1"><i class="fa-solid fa-atom"></i></div>
-                            <div class="card-text pt-2">CHEMICALS</div>
+            <div class="container">
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5 g-4"> 
+                    <div class="col">
+                        <div class="card home-card">
+                            <div class="card-body text-center d-flex flex-column justify-content-center">
+                                <div class="card-title"><i class="fa-solid fa-atom"></i></div>
+                                <div class="card-text pt-2">CHEMICALS</div>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="col">
-                    <div class="card home-card">
-                        <div class="card-body text-center d-flex flex-column justify-content-center">
-                            <div class="card-title h1"><i class="fa-solid fa-prescription-bottle"></i></div>
-                            <div class="card-text pt-2">SUPPLIES</div>
+                    <div class="col">
+                        <div class="card home-card">
+                            <div class="card-body text-center d-flex flex-column justify-content-center">
+                                <div class="card-title"><i class="fa-solid fa-prescription-bottle"></i></div>
+                                <div class="card-text pt-2">SUPPLIES</div>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="col">
-                    <div class="card home-card">
-                        <div class="card-body text-center d-flex flex-column justify-content-center">
-                            <div class="card-title h1"><i class="fa-solid fa-diagram-project"></i></div> <div class="card-text pt-2">MODELS/CHARTS</div>
+                    <div class="col">
+                        <div class="card home-card">
+                            <div class="card-body text-center d-flex flex-column justify-content-center">
+                                <div class="card-title"><i class="fa-solid fa-diagram-project"></i></div> <div class="card-text pt-2">MODELS/CHARTS</div>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="col">
-                    <div class="card home-card">
-                        <div class="card-body text-center d-flex flex-column justify-content-center">
-                            <div class="card-title h1"><i class="fa-solid fa-microscope"></i></div>
-                            <div class="card-text pt-2">EQUIPMENT</div>
+                    <div class="col">
+                        <div class="card home-card">
+                            <div class="card-body text-center d-flex flex-column justify-content-center">
+                                <div class="card-title"><i class="fa-solid fa-microscope"></i></div>
+                                <div class="card-text pt-2">EQUIPMENT</div>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="col">
-                    <div class="card home-card">
-                        <div class="card-body text-center d-flex flex-column justify-content-center">
-                            <div class="card-title h1"><i class="fa-solid fa-vial"></i></div>
-                            <div class="card-text pt-2">SPECIMENS</div>
+                    <div class="col">
+                        <div class="card home-card">
+                            <div class="card-body text-center d-flex flex-column justify-content-center">
+                                <div class="card-title"><i class="fa-solid fa-vial"></i></div>
+                                <div class="card-text pt-2">SPECIMENS</div>
+                            </div>
                         </div>
                     </div>
                 </div>
