--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
                 </div>
                 <hr>
             </div>
-            <div class="container">
+            <div class="container mt-2">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5 g-4"> 
                     <div class="col">
                         <div class="card home-card">
                             <div class="card-body text-center d-flex flex-column justify-content-center">
-                                <div class="card-title"><i class="fa-solid fa-atom"></i></div>
+                                <div class="card-title gradient-text"><i class="fa-solid fa-atom"></i></div>
                                 <div class="card-text pt-2">CHEMICALS</div>
                             </div>
                         </div>
@@ -96,7 +96,7 @@
                     <div class="col">
                         <div class="card home-card">
                             <div class="card-body text-center d-flex flex-column justify-content-center">
-                                <div class="card-title"><i class="fa-solid fa-prescription-bottle"></i></div>
+                                <div class="card-title gradient-text"><i class="fa-solid fa-prescription-bottle"></i></div>
                                 <div class="card-text pt-2">SUPPLIES</div>
                             </div>
                         </div>
@@ -105,7 +105,8 @@
                     <div class="col">
                         <div class="card home-card">
                             <div class="card-body text-center d-flex flex-column justify-content-center">
-                                <div class="card-title"><i class="fa-solid fa-diagram-project"></i></div> <div class="card-text pt-2">MODELS/CHARTS</div>
+                                <div class="card-title gradient-text"><i class="fa-solid fa-diagram-project"></i></div> 
+                                <div class="card-text pt-2">MODELS/CHARTS</div>
                             </div>
                         </div>
                     </div>
@@ -113,7 +114,7 @@
                     <div class="col">
                         <div class="card home-card">
                             <div class="card-body text-center d-flex flex-column justify-content-center">
-                                <div class="card-title"><i class="fa-solid fa-microscope"></i></div>
+                                <div class="card-title gradient-text"><i class="fa-solid fa-microscope"></i></div>
                                 <div class="card-text pt-2">EQUIPMENT</div>
                             </div>
                         </div>
@@ -122,7 +123,7 @@
                     <div class="col">
                         <div class="card home-card">
                             <div class="card-body text-center d-flex flex-column justify-content-center">
-                                <div class="card-title"><i class="fa-solid fa-vial"></i></div>
+                                <div class="card-title gradient-text"><i class="fa-solid fa-vial"></i></div>
                                 <div class="card-text pt-2">SPECIMENS</div>
                             </div>
                         </div>
