added &nbsp; on p

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
                     NOTE: <br>
                     1. Requests are subject to review by Chemical Laboratory Technicians. <br>
-                    2. Materials are subject to specific lead times in which materials must be requested: <br> Chemicals / Supplies / Models / Charts - 2 days before intended use<br> 
-                    Equipment - On the day of use<br> Specimen for instruction - 1 month before its use<br> Specimen for research - 2 months before its use<br>
+                    2. Materials are subject to specific lead times in which materials must be requested: <br> &nbsp;&nbsp;&nbsp;&nbsp;Chemicals / Supplies / Models / Charts - 2 days before intended use<br> 
+                    &nbsp;&nbsp;&nbsp;&nbsp;Equipment - On the day of use<br> &nbsp;&nbsp;&nbsp;&nbsp;Specimen for instruction - 1 month before its use<br> &nbsp;&nbsp;&nbsp;&nbsp;Specimen for research - 2 months before its use<br>
                     3. Any damage/lost material must be replaced or paid at the Cashier’s office before the end of the semester.<br>
                     4. Personal information, including e-signatures, will be requested by the system in accordance to the university’s policy regarding laboratory material requisition. Personal information will be securely stored by the system with access restricted to authorized personnel only and is governed by strict confidentiality obligations in compliance with the Data Privacy Act of 2012 (Republic Act No. 10173).<br>
                     5. For student requests, an  e-signature from your subject professor or program head will be required. A copy of your requisition will be sent to them as well.</p>
