added some changes.

--- a/search.html
+++ b/search.html
@@ -95,11 +95,112 @@
                     </div>
                 </div>
                 <div class="col-10">
-                    <h1 class="text-center">sdsdsa</h1>
+                    <div class="row g-2">
+                        <div class="col">
+                            <div class="card mt-3">
+                                <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
+                                <div class="card-body">
+                                    <h5 class="card-text">Ethanol <br> (99%)</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card mt-3">
+                                <img class="card-img-top" src="./resource/img/formaldehyde.jpg" alt="formaldehyde">
+                                <div class="card-body">
+                                    <h5 class="card-text">Formaldehyde <br> (37%)</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card mt-3">
+                                <img class="card-img-top" src="./resource/img/hydrochloric-acid.jpg" alt="hydrochloric acid">
+                                <div class="card-body">
+                                    <h5 class="card-text">Hydrochloric Acid <br> (99%)</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card mt-3">
+                                <img class="card-img-top" src="./resource/img/formaldehyde.jpg" alt="formaldehyde">
+                                <div class="card-body">
+                                    <h5 class="card-text">Formaldehyde <br> (37%)</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card mt-3">
+                                <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
+                                <div class="card-body">
+                                    <h5 class="card-text">Ethanol <br> (99%)</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card mt-3">
+                                <img class="card-img-top" src="./resource/img/hydrochloric-acid.jpg" alt="hydrochloric acid">
+                                <div class="card-body">
+                                    <h5 class="card-text">Hydrochloric Acid<br> (37%)</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card mt-3">
+                                <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
+                                <div class="card-body">
+                                    <h5 class="card-text">Ethanol <br> (99%)</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card mt-3">
+                                <img class="card-img-top" src="./resource/img/hydrochloric-acid.jpg" alt="hydrochloric acid">
+                                <div class="card-body">
+                                    <h5 class="card-text">Hydrochloric Acid <br> (37%)</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card mt-3">
+                                <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
+                                <div class="card-body">
+                                    <h5 class="card-text">Ethanol <br> (99%)</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card mt-3">
+                                <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
+                                <div class="card-body">
+                                    <h5 class="card-text">Ethanol <br> (99%)</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card mt-3">
+                                <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
+                                <div class="card-body">
+                                    <h5 class="card-text">Ethanol <br> (99%)</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- footer -->
+	<footer>
+        <div class="container-fluid">
+            <p class="text-center text-white pt-2"><small>
+                CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
+                <i class="fa-regular fa-copyright"></i> 2025 Copyright <strong>CENTRO ESCOLAR UNIVERSITY MALOLOS, Chemical Laboratory</strong><br>
+                Developed by <strong>Renz Matthew Magsakay (official.renzmagsakay@gmail.com), Krizia Jane Lleva (lleva2234517@mls.ceu.edu.ph) & Angelique Mae Gabriel (gabriel2231439@mls.ceu.edu.ph)</strong>
+                </small>
+            </p>
+        </div>
+	</footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
