--- a/sign-up.html
+++ b/sign-up.html
@@ -15,9 +15,21 @@
 
 
     <script src="https://kit.fontawesome.com/6563a04357.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 
 </head>
 <body class="signup-page">
+    <!--pop-up-->
+   <div class="col-md-6">
+    <div id="successAlert" 
+         class="alert alert-success alert-dismissible fade d-none" 
+         role="alert">
+        We have sent a verification link to your email!
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+</div>
+
     <section class="log-in d-flex justify-content-center align-items-center">
         <div class="container">
             <div class="row justify-content-center">
@@ -31,7 +43,8 @@
                         <div class="col-md-6 p-4">
                             <img src="resource/img/molecules-logo.png" class="logo-img mb-3">
                             <h2 class="greetings fw-bold mb-1">Sign up</h2>
-                            <form>
+
+                            <form onsubmit="event.preventDefault(); showAlert();">
                                 <div class="row mb-3 mt-3">
                                     <div class="col-md-6">
                                         <label class="label-text">First Name:</label>
@@ -79,3 +92,11 @@
     </section>
 </body>
 </html>
+
+<script>
+function showAlert() {
+  const alertBox = document.getElementById("successAlert");
+  alertBox.classList.remove("d-none");
+  alertBox.classList.add("show");
+}
+</script>
