--- a/search.html
+++ b/search.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search</title>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css"  href="resource/css/search.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,194 +13,238 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bona+Nova:ital,wght@0,400;0,700;1,400&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Ruda:wght@400..900&family=Tilt+Warp&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/6563a04357.js" crossorigin="anonymous"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+
 </head>
 <body>
-    <!-- navbar -->
-    <nav class="navbar">
-        <a class="navbar-brand" href="#">
-            <img class="ceu-logo img-fluid" src="./resource/img/ceu-molecules.png"/>
+<!-- Collapsible Content -->
+ <nav class="navbar">
+  <a class="navbar-brand" href="#">
+    <img class="ceu-logo img-fluid" src="./resource/img/ceu-molecules.png"/>
+  </a>
+  <button class="navbar-toggler me-3 custom-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvasNavbarLabel">CEU Molecules</h5>
+      <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+        <li class="nav-item">
+          <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Search</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Requests</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Help</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Logout</a>
+        </li>
+      </ul>
+    </div>
+</nav>
+
+
+
+
+<nav class="sidebar close">
+  <header>
+    <div class="toggle-container">
+      <i class="fa-solid fa-angle-right toggle"></i>
+    </div>
+  </header>
+
+  <div class="menu-bar">
+      <ul class="menu-links">
+      <li class="search-box">
+          <i class="fa-solid fa-magnifying-glass icon"></i>
+          <input type="search" placeholder=" Search..." class="search-input">
+      </li>
+      <li class="nav-links chemicals-btn">
+        <a href="#">
+          <i class="fa-solid fa-flask icon"></i>
+          <span class="text nav-text">Chemicals</span>
         </a>
-        <button class="navbar-toggler me-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-        <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">CEU Molecules</h5>
-            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-            <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="#">Profile</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="#">Search</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="#">Requests</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="#">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="#">Help</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="#">Logout</a>
-            </li>
-            </ul>
-        </div>
-    </nav>
-    <!-- navbar end -->
+      </li>
+      <li class="nav-links chemicals-btn">
+        <a href="#">
+          <i class="fa-solid fa-prescription-bottle icon"></i>
+          <span class="text nav-text">Supplies</span>
+        </a>
+      </li>
+      <li class="nav-links chemicals-btn">
+        <a href="#">
+          <i class="fa-solid fa-biohazard icon"></i>
+          <span class="text nav-text">Model/Charts</span>
+        </a>
+      </li>
+      <li class="nav-links chemicals-btn">
+        <a href="#">
+          <i class="fa-solid fa-microscope icon"></i>
+          <span class="text nav-text">Equipments</span>
+        </a>
+      </li>
+      <li class="nav-links chemicals-btn">
+        <a href="#">
+          <i class="fa-solid fa-eye-dropper icon"></i>
+          <span class="text nav-text">Specimens</span>
+        </a>
+      </li>
+      <li class="nav-links chemicals-btn">
+        <a href="#">
+          <i class="fa-solid fa-ellipsis icon"></i>
+          <span class="text nav-text">Others</span>
+        </a>
+      </li>
+    </ul>
 
-    <section>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-2">
-                    <div class="input-group mt-3">
-                        <button class="search-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
-                        <input type="text" placeholder="Search" class="input-search">    
-                    </div>
-                    <div class="buttons">
-                        <button class="chem-btn">
-                            <i class="fa-solid fa-fw fa-atom"></i>
-                            CHEMICALS
-                        </button>
-                        <button class="supp-btn">
-                            <i class="fa-solid fa-fw fa-prescription-bottle"></i>
-                            SUPPLIES
-                        </button>
-                        <button class="model-btn">
-                            <i class="fa-solid fa-fw fa-diagram-project"></i>
-                            MODELS/CHARTS
-                        </button>
-                        <button class="equip-btn">
-                            <i class="fa-solid fa-fw fa-microscope"></i>
-                            EQUIPMENTS
-                        </button>
-                        <button class="specimen-btn">
-                            <i class="fa-solid fa-fw fa-vial"></i>
-                            SPECIMEN
-                        </button>
-                    </div>
-                    <div>
-                        <div class="other-btn">
-                            <button>OTHERS</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-10">
-                    <div class="row g-2">
-                        <div class="col">
-                            <div class="card mt-3">
-                                <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
-                                <div class="card-body">
-                                    <h5 class="card-text">Ethanol <br> (99%)</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card mt-3">
-                                <img class="card-img-top" src="./resource/img/formaldehyde.jpg" alt="formaldehyde">
-                                <div class="card-body">
-                                    <h5 class="card-text">Formaldehyde <br> (37%)</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card mt-3">
-                                <img class="card-img-top" src="./resource/img/hydrochloric-acid.jpg" alt="hydrochloric acid">
-                                <div class="card-body">
-                                    <h5 class="card-text">Hydrochloric Acid <br> (99%)</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card mt-3">
-                                <img class="card-img-top" src="./resource/img/formaldehyde.jpg" alt="formaldehyde">
-                                <div class="card-body">
-                                    <h5 class="card-text">Formaldehyde <br> (37%)</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card mt-3">
-                                <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
-                                <div class="card-body">
-                                    <h5 class="card-text">Ethanol <br> (99%)</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card mt-3">
-                                <img class="card-img-top" src="./resource/img/hydrochloric-acid.jpg" alt="hydrochloric acid">
-                                <div class="card-body">
-                                    <h5 class="card-text">Hydrochloric Acid<br> (37%)</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card mt-3">
-                                <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
-                                <div class="card-body">
-                                    <h5 class="card-text">Ethanol <br> (99%)</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card mt-3">
-                                <img class="card-img-top" src="./resource/img/hydrochloric-acid.jpg" alt="hydrochloric acid">
-                                <div class="card-body">
-                                    <h5 class="card-text">Hydrochloric Acid <br> (37%)</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card mt-3">
-                                <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
-                                <div class="card-body">
-                                    <h5 class="card-text">Ethanol <br> (99%)</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card mt-3">
-                                <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
-                                <div class="card-body">
-                                    <h5 class="card-text">Ethanol <br> (99%)</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="card mt-3">
-                                <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
-                                <div class="card-body">
-                                    <h5 class="card-text">Ethanol <br> (99%)</h5>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    <div class="bottom-content">
+  <li class="nav-links">
+    <a href="#">
+      <i class="fa-solid fa-arrow-right-from-bracket icon"></i>
+      <span class="text nav-text">Logout</span>
+    </a>
+  </li>
+</div>
+</div>
+</nav>
 
-    <!-- footer -->
-	<footer>
-        <div class="container-fluid">
-            <p class="text-center text-white pt-2"><small>
-                CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
-                <i class="fa-regular fa-copyright"></i> 2025 Copyright <strong>CENTRO ESCOLAR UNIVERSITY MALOLOS, Chemical Laboratory</strong><br>
-                Developed by <strong>Renz Matthew Magsakay (official.renzmagsakay@gmail.com), Krizia Jane Lleva (lleva2234517@mls.ceu.edu.ph) & Angelique Mae Gabriel (gabriel2231439@mls.ceu.edu.ph)</strong>
-                </small>
-            </p>
-        </div>
-	</footer>
+<main class="content">
+<div class="container-fluid">
+  <div class="row row-cols-1 row-cols-md-4 row-cols-lg-4 g-3">
+  <div class="col">
+    <div class="card h-100">
+      <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
+      <div class="card-body">
+        <h5 class="card-text">Ethanol (99%)</h5>
+        <h5 class="card-text stock-text">Stock: 36 ml</h5>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100">
+      <img class="card-img-top" src="./resource/img/formaldehyde.jpg" alt="formaldehyde">
+      <div class="card-body">
+        <h5 class="card-text">Formaldehyde (37%)</h5>
+        <h5 class="card-text stock-text">Stock: 36 ml</h5>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100">
+      <img class="card-img-top" src="./resource/img/hydrochloric-acid.jpg" alt="hydrochloric acid">
+      <div class="card-body">
+        <h5 class="card-text">Hydrochloric Acid (99%)</h5>
+        <h5 class="card-text stock-text mb-2">Stock: 36 ml</h5>
+      </div>
+    </div>
+</div>
+<div class="col">
+  <div class="card h-100">
+    <img class="card-img-top" src="./resource/img/formaldehyde.jpg" alt="formaldehyde">
+    <div class="card-body">
+      <h5 class="card-text">Formaldehyde (37%)</h5>
+      <h5 class="card-text stock-text">Stock: 36 ml</h5>
+    </div>
+  </div>
+  </div>
+<div class="col">
+  <div class="card mt-3">
+    <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
+    <div class="card-body">
+      <h5 class="card-text">Ethanol (99%)</h5>
+      <h5 class="card-text stock-text">Stock: 36 ml</h5>
+      </div>
+  </div>
+</div>
+<div class="col">
+  <div class="card mt-3">
+    <img class="card-img-top" src="./resource/img/hydrochloric-acid.jpg" alt="hydrochloric acid">
+    <div class="card-body">
+      <h5 class="card-text">Hydrochloric Acid (37%)</h5>
+      <h5 class="card-text stock-text">Stock: 36 ml</h5>
+    </div>
+  </div>
+</div>
+<div class="col">
+  <div class="card mt-3">
+      <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
+      <div class="card-body">
+        <h5 class="card-text">Ethanol (99%)</h5>
+        <h5 class="card-text stock-text">Stock: 36 ml</h5>
+      </div>
+  </div>
+</div>
+<div class="col">
+  <div class="card mt-3">
+    <img class="card-img-top" src="./resource/img/hydrochloric-acid.jpg" alt="hydrochloric acid">
+    <div class="card-body">
+      <h5 class="card-text">Hydrochloric Acid (37%)</h5>
+      <h5 class="card-text stock-text">Stock: 36 ml</h5>
+    </div>
+  </div>
+</div>
+<div class="col">
+  <div class="card mt-3">
+    <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
+    <div class="card-body">
+      <h5 class="card-text">Ethanol (99%)</h5>
+      <h5 class="card-text stock-text">Stock: 36 ml</h5>
+    </div>
+  </div>
+</div>
+<div class="col">
+  <div class="card mt-3">
+  <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
+  <div class="card-body">
+    <h5 class="card-text">Ethanol (99%)</h5>
+    <h5 class="card-text stock-text">Stock: 36 ml</h5>
+  </div>
+  </div>
+</div>
+<div class="col">
+  <div class="card mt-3">
+  <img class="card-img-top" src="./resource/img/ethanol.jpg" alt="ethanol">
+  <div class="card-body">
+    <h5 class="card-text">Ethanol (99%)</h5>
+    <h5 class="card-text stock-text">Stock: 36 ml</h5>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+</main>
+
+<!-- footer -->
+<footer>
+  <div class="container-fluid">
+    <p class="text-center text-white pt-2"><small>
+      CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
+      <i class="fa-regular fa-copyright"></i> 2025 Copyright <strong>CENTRO ESCOLAR UNIVERSITY MALOLOS, Chemical Laboratory</strong><br>
+      Developed by <strong>Renz Matthew Magsakay (official.renzmagsakay@gmail.com), Krizia Jane Lleva (lleva2234517@mls.ceu.edu.ph) & Angelique Mae Gabriel (gabriel2231439@mls.ceu.edu.ph)</strong>
+      </small>
+      </p>
+  </div>
+</footer>
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
 </html>
+    
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+
+<script src="resource/js/script.js"></script>
