fixed the footer

--- a/search.html
+++ b/search.html
@@ -231,7 +231,7 @@
 </main>
 
 <!-- footer -->
-<footer>
+<footer class="sticky-footer  fixed-bottom">
   <div class="container-fluid">
     <p class="text-center text-white pt-2"><small>
       CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
