--- a/index.html
+++ b/index.html
@@ -18,54 +18,54 @@
 
 <body>
     <!-- navbar -->
-    <nav class="navbar">
-        <a class="navbar-brand" href="#">
-            <img class="ceu-logo img-fluid" src="./resource/img/ceu-molecules.png"/>
-        </a>
-        <button class="navbar-toggler me-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-        <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">CEU Molecules</h5>
-            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-            <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="#">Profile</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="#">Search</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="#">Requests</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="#">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="#">Help</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="#">Logout</a>
-            </li>
-            </ul>
-        </div>
-    </nav>
+     <nav class="navbar">
+  <a class="navbar-brand" href="#">
+    <img class="ceu-logo img-fluid" src="./resource/img/ceu-molecules.png"/>
+  </a>
+  <button class="navbar-toggler me-3 custom-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvasNavbarLabel">CEU Molecules</h5>
+      <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+        <li class="nav-item">
+          <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Search</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Requests</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Help</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Logout</a>
+        </li>
+      </ul>
+    </div>
+</nav>
     <!-- navbar end -->
 
     <!-- home -->
     <section class="home">
         <div class="container-fluid">
             <div class="row row-no-gutters align-items-center">
-                <div class="col-5">
+                <div class="col-12 col-md-6 col-lg-5">
                     <img src="./resource/img/bg.jpg" alt="ceu-building" class="img-fluid">
                 </div>
-                <div class="col-7">
+                <div class="col-12 col-md-6 col-lg-7">
                     <h4 class="home-text text-center pt-2">CHEMICAL LABORATORY M.O.L.E.C.U.L.E.S</h4>
                     <p class="text-dark ps-3 pe-3" style="font-size: 0.9rem;">The CEU Malolos MOLECULES is a system developed to make requisition of laboratory materials easier, faster
                     and more reliable. The system directly sends your requisition form to the CEU Malolos Chemical Laboratory
@@ -83,11 +83,11 @@
                 <hr>
             </div>
             <div class="container mt-2">
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-5 g-4"> 
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-5 g-4"> 
                     <div class="col">
                         <div class="card home-card">
                             <div class="card-body text-center d-flex flex-column justify-content-center">
-                                <div class="card-title gradient-text"><i class="fa-solid fa-atom"></i></div>
+                                <div class="card-title gradient-text"><i class="fa-solid fa-flask"></i></div>
                                 <div class="card-text pt-2">CHEMICALS</div>
                             </div>
                         </div>
@@ -130,21 +130,23 @@
                     </div>
                 </div>
             </div>
+
+            
         </div>
     </section>
     <!-- home -->
 
     <!-- footer -->
-	<footer>
-        <div class="container-fluid">
-            <p class="text-center text-white pt-2"><small>
-                CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
-                <i class="fa-regular fa-copyright"></i> 2025 Copyright <strong>CENTRO ESCOLAR UNIVERSITY MALOLOS, Chemical Laboratory</strong><br>
-                Developed by <strong>Renz Matthew Magsakay (official.renzmagsakay@gmail.com), Krizia Jane Lleva (lleva2234517@mls.ceu.edu.ph) & Angelique Mae Gabriel (gabriel2231439@mls.ceu.edu.ph)</strong>
-                </small>
-            </p>
-        </div>
-	</footer>
+<footer class="sticky-footer  fixed-bottom">
+  <div class="container-fluid">
+    <p class="text-center text-white pt-2"><small>
+      CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
+      <i class="fa-regular fa-copyright"></i> 2025 Copyright <strong>CENTRO ESCOLAR UNIVERSITY MALOLOS, Chemical Laboratory</strong><br>
+      Developed by <strong>Renz Matthew Magsakay (official.renzmagsakay@gmail.com), Krizia Jane Lleva (lleva2234517@mls.ceu.edu.ph) & Angelique Mae Gabriel (gabriel2231439@mls.ceu.edu.ph)</strong>
+      </small>
+      </p>
+  </div>
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
