--- a/search.html
+++ b/search.html
@@ -89,7 +89,7 @@
       </li>
       <li class="nav-links chemicals-btn">
         <a href="#">
-          <i class="fa-solid fa-biohazard icon"></i>
+          <i class="fa-solid fa-diagram-project  icon"></i>
           <span class="text nav-text">Model/Charts</span>
         </a>
       </li>
@@ -101,7 +101,7 @@
       </li>
       <li class="nav-links chemicals-btn">
         <a href="#">
-          <i class="fa-solid fa-eye-dropper icon"></i>
+          <i class="fa-solid fa-vial icon"></i>
           <span class="text nav-text">Specimens</span>
         </a>
       </li>
@@ -231,7 +231,7 @@
 </main>
 
 <!-- footer -->
-<footer class="sticky-footer  fixed-bottom">
+<footer class="sticky- fixed-bottom ">
   <div class="container-fluid">
     <p class="text-center text-white pt-2"><small>
       CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
