edited the admin-search 1st navbar

--- a/admin-search.html
+++ b/admin-search.html
@@ -21,14 +21,30 @@
 <body>
 
  <!-- 1st nav -->
- <nav class="navbar">
+<nav class="navbar navbar-expand-lg">
   <a class="navbar-brand" href="#">
-    <img class="ceu-logo img-fluid" src="./resource/img/ceu-molecules.png"/>
+    <img class="ceu-logo img-fluid" src="./resource/img/ceu-molecules.png" alt="CEU Molecules Logo"/>
   </a>
-  <button class="navbar-toggler me-3 custom-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+  
+  <button class="navbar-toggler me-3 custom-toggler d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+  
+  <div class="d-none d-lg-block ms-auto">
+      <ul class="navbar-nav pe-3">
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Requests</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Inventory</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Report</a>
+        </li>
+      </ul>
+  </div>
+
+  <div class="offcanvas offcanvas-end d-lg-none" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title" id="offcanvasNavbarLabel">CEU Molecules</h5>
       <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -36,28 +52,17 @@
     <div class="offcanvas-body">
       <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
         <li class="nav-item">
-          <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#">Profile</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#">Search</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link text-white" href="#">Requests</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">About</a>
+          <a class="nav-link text-white" href="#">Inventory</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="#">Help</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#">Logout</a>
+          <a class="nav-link text-white" href="#">Report</a>
         </li>
       </ul>
     </div>
+  </div>
 </nav>
 
 
