--- a/home-admin.html
+++ b/home-admin.html
@@ -68,5 +68,78 @@
 
 <!-- main content -->
 <main class="home-admin">
+    <div class="container">
+      <h2 class="requests-heading">Requests</h2>
+        <div class="row">
+            <div class="col-12 mb-3">
+                <div class="request-card">
+                  <div class="request-details-container">
+                        <div class="request-text">
+                            <h5 class="request-title">Request Received!</h5>
+                            <p class="request-info">From: Renz Magsakay</p>
+                            <p class="request-info">Status: Submitted</p>
+                        </div>
+                        <div class="request-timestamp">
+                            <span class="timestamp-text">08/31/2025 - 7:00PM</span>
+                        </div>
+                    </div>
+                    <div class="view-button-container">
+                        <button class="view-button">View</button>
+                    </div>
+                </div>
+            </div>
 
+            <div class="col-12 mb-3">
+                <div class="request-card">
+                    <div class="request-details-container">
+                        <div class="request-text">
+                            <h5 class="request-title">Request Received!</h5>
+                            <p class="request-info">From: Renz Magsakay</p>
+                            <p class="request-info">Status: Submitted</p>
+                        </div>
+                        <div class="request-timestamp">
+                            <span class="timestamp-text">08/31/2025 - 7:00PM</span>
+                        </div>
+                    </div>
+                    <div class="view-button-container">
+                        <button class="view-button">View</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 mb-3">
+                <div class="request-card">
+                    <div class="request-details-container">
+                        <div class="request-text">
+                            <h5 class="request-title">Request Received!</h5>
+                            <p class="request-info">From: Renz Magsakay</p>
+                            <p class="request-info">Status: Submitted</p>
+                        </div>
+                        <div class="request-timestamp">
+                            <span class="timestamp-text">08/31/2025 - 7:00PM</span>
+                        </div>
+                    </div>
+                    <div class="view-button-container">
+                        <button class="view-button">View</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </main>
+
+<!-- footer -->
+<footer class="sticky- fixed-bottom ">
+  <div class="container-fluid">
+    <p class="text-center text-white pt-2"><small>
+      CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
+      <i class="fa-regular fa-copyright"></i> 2025 Copyright <strong>CENTRO ESCOLAR UNIVERSITY MALOLOS, Chemical Laboratory</strong><br>
+      Developed by <strong>Renz Matthew Magsakay (official.renzmagsakay@gmail.com), Krizia Jane Lleva (lleva2234517@mls.ceu.edu.ph) & Angelique Mae Gabriel (gabriel2231439@mls.ceu.edu.ph)</strong>
+      </small>
+      </p>
+  </div>
+</footer>
+
+</body>
+</html>
