--- a/admin-search.html
+++ b/admin-search.html
@@ -382,10 +382,53 @@
             </div>
         </div>
         <div class="edit-button-container">
-          <button class="request-buttonedit-button">Edit</button>
+          <button class="request-button edit-button">Edit</button>
         </div>
     </div>
 </div>
+
+<div id="edit-equipment-popup" class="edit-popup">
+  <div class="edit-popup-content">
+    <button class="close-btn edit-close-btn">&times;</button>
+    <h4>Edit Equipment Details</h4>
+    <form id="edit-equipment-form">
+      <label for="edit-equipment-title">Equipment Name:</label>
+      <input type="text" id="edit-equipment-title" name="edit-equipment-title">
+      <label for="edit-equipment-stock">Stock:</label>
+      <input type="number" id="edit-equipment-stock" name="edit-equipment-stock">
+      <div class="button-container">
+        <button type="submit" class="save-btn">Save Changes</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+<div id="edit-chemical-popup" class="edit-popup">
+    <div class="edit-popup-content">
+        <button class="close-btn edit-close-btn">&times;</button>
+        <h4>Edit Chemical Details</h4>
+        <form id="edit-chemical-form">
+            <label for="edit-chemical-title">Chemical Name:</label>
+            <input type="text" id="edit-chemical-title" name="edit-chemical-title">
+            
+            <label for="edit-chemical-stock">Stock:</label>
+            <div class="stock-input-group">
+                <input type="number" id="edit-chemical-stock" name="edit-chemical-stock">
+                <select id="edit-chemical-stock-unit" name="edit-chemical-stock-unit">
+                    <option value="" selected disabled>Select Unit</option> 
+                    <option value="ml">ml</option>
+                    <option value="l">l</option>
+                </select>
+            </div>
+            
+            <div class="button-container">
+                <button type="submit" class="save-btn">Save Changes</button>
+            </div>
+        </form>
+    </div>
+</div>
+</body>
+</html>
 </main>
 
 <!-- footer -->
