edited footer and removed navbar of user and admin search

--- a/cart.html
+++ b/cart.html
@@ -128,6 +128,18 @@
         </div>
     </div>
 
+<!-- footer -->
+<footer>
+  <div class="container-fluid">
+    <p class="text-center text-white pt-2"><small>
+      CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
+      <i class="fa-regular fa-copyright"></i> 2025 Copyright <strong>CENTRO ESCOLAR UNIVERSITY MALOLOS, Chemical Laboratory</strong><br>
+      Developed by <strong>Renz Matthew Magsakay (official.renzmagsakay@gmail.com), Krizia Jane Lleva (lleva2234517@mls.ceu.edu.ph) & Angelique Mae Gabriel (gabriel2231439@mls.ceu.edu.ph)</strong>
+      </small>
+    </p>
+  </div>
+</footer>
+
 </body>
 </html>
 
