--- a/user-search.html
+++ b/user-search.html
@@ -21,7 +21,7 @@
 <body>
 
  <!-- 1st nav -->
- <nav class="navbar">
+ <!-- <nav class="navbar">
   <a class="navbar-brand" href="#">
     <img class="ceu-logo img-fluid" src="./resource/img/ceu-molecules.png"/>
   </a>
@@ -58,7 +58,7 @@
         </li>
       </ul>
     </div>
-</nav>
+</nav> -->
 
 
 
@@ -374,14 +374,14 @@
 </main>
 
 <!-- footer -->
-<footer class="sticky- fixed-bottom ">
+<footer>
   <div class="container-fluid">
     <p class="text-center text-white pt-2"><small>
       CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
       <i class="fa-regular fa-copyright"></i> 2025 Copyright <strong>CENTRO ESCOLAR UNIVERSITY MALOLOS, Chemical Laboratory</strong><br>
       Developed by <strong>Renz Matthew Magsakay (official.renzmagsakay@gmail.com), Krizia Jane Lleva (lleva2234517@mls.ceu.edu.ph) & Angelique Mae Gabriel (gabriel2231439@mls.ceu.edu.ph)</strong>
       </small>
-      </p>
+    </p>
   </div>
 </footer>
     
