--- a/admin-search.html
+++ b/admin-search.html
@@ -21,7 +21,7 @@
 <body>
 
  <!-- 1st nav -->
-<nav class="navbar navbar-expand-lg">
+<!-- <nav class="navbar navbar-expand-lg">
   <a class="navbar-brand" href="#">
     <img class="ceu-logo img-fluid" src="./resource/img/ceu-molecules.png" alt="CEU Molecules Logo"/>
   </a>
@@ -63,7 +63,7 @@
       </ul>
     </div>
   </div>
-</nav>
+</nav> -->
 
 
 
@@ -131,7 +131,7 @@
 </nav>
 
 <!-- main content for admin page-->
-<main class="admin-page content">
+<main class="admin-page content d-flex flex-column min-vh-100">
 <div class="container-fluid">
   <div class="row row-cols-1 row-cols-md-4 row-cols-lg-4 g-3">
   <div class="col">
@@ -167,17 +167,11 @@
       </div>
     </div>
   </div>
-
-
-  
-
-
-
-
-
-
 </div>
 </div>
+</body>
+</html>
+</main>
 
 <!-- pop-up page -->
 
@@ -268,22 +262,18 @@
       </form>
     </div>
 </div>
-</body>
-</html>
-</main>
 
 <!-- footer -->
-<footer class="sticky- fixed-bottom ">
+<footer>
   <div class="container-fluid">
     <p class="text-center text-white pt-2"><small>
       CEU MALOLOS MOLECULES || <strong>Chemical Laboratory: sample@ceu.edu.ph</strong><br>
       <i class="fa-regular fa-copyright"></i> 2025 Copyright <strong>CENTRO ESCOLAR UNIVERSITY MALOLOS, Chemical Laboratory</strong><br>
       Developed by <strong>Renz Matthew Magsakay (official.renzmagsakay@gmail.com), Krizia Jane Lleva (lleva2234517@mls.ceu.edu.ph) & Angelique Mae Gabriel (gabriel2231439@mls.ceu.edu.ph)</strong>
       </small>
-      </p>
+    </p>
   </div>
 </footer>
-    
 </body>
 </html>
     
