added another nav

--- a/user-search.html
+++ b/user-search.html
@@ -136,7 +136,6 @@
         <h5 class="card-text">Ethanol (99%)</h5>
         <h5 class="card-text stock-text">Stock: 36 ml</h5>
         <div class="info">
-          <button class="btn-request">Request</button>
           <button class="btn-view"
           data-type="equipment"
           data-name="Hydrochloric Acid (99%)"
@@ -153,7 +152,6 @@
         <h5 class="card-text">Formaldehyde (37%)</h5>
         <h5 class="card-text stock-text">Stock: 36 ml</h5>
         <div class="info">
-          <button class="btn-request">Request</button>
           <button class="btn-view" data-type="chemical"
           data-name="Formaldehyde (99%)"
           data-stock="36 ml"
@@ -170,7 +168,6 @@
         <h5 class="card-text">Hydrochloric Acid (99%)</h5>
         <h5 class="card-text stock-text">Stock: 36 ml</h5>
         <div class="info">
-        <button class="btn-request">Request</button>
         <button class="btn-view" data-type="equipment"
         data-name="Hydrochloric Acid (99%)"
         data-stock="36 ml"
@@ -187,7 +184,6 @@
       <h5 class="card-text">Formaldehyde (37%)</h5>
       <h5 class="card-text stock-text">Stock: 36 ml</h5>
       <div class="info">
-        <button class="btn-request">Request</button>
         <button class="btn-view" data-type="chemical"
         data-name="Hydrochloric Acid (99%)"
         data-stock="36 ml"
@@ -204,7 +200,6 @@
       <h5 class="card-text">Ethanol (99%)</h5>
       <h5 class="card-text stock-text">Stock: 36 ml</h5>
       <div class="info">
-        <button class="btn-request">Request</button>
         <button class="btn-view" data-type="chemical"
         data-name="Hydrochloric Acid (99%)"
         data-stock="36 ml"
@@ -221,7 +216,6 @@
       <h5 class="card-text">Hydrochloric Acid (37%)</h5>
       <h5 class="card-text stock-text">Stock: 36 ml</h5>
       <div class="info">
-        <button class="btn-request">Request</button>
         <button class="btn-view" data-type="equipment"
         data-name="Hydrochloric Acid (99%)"
         data-stock="36 ml"
@@ -238,7 +232,6 @@
         <h5 class="card-text">Ethanol (99%)</h5>
         <h5 class="card-text stock-text">Stock: 36 ml</h5>
         <div class="info">
-          <button class="btn-request">Request</button>
           <button class="btn-view" data-type="equipment"
           data-name="Hydrochloric Acid (99%)"
           data-stock="36 ml"
@@ -255,7 +248,6 @@
       <h5 class="card-text">Hydrochloric Acid (37%)</h5>
       <h5 class="card-text stock-text">Stock: 36 ml</h5>
       <div class="info">
-        <button class="btn-request">Request</button>
         <button class="btn-view" data-type="equipment"
         data-name="Hydrochloric Acid (99%)"
         data-stock="36 ml"
@@ -272,7 +264,6 @@
       <h5 class="card-text">Ethanol (99%)</h5>
       <h5 class="card-text stock-text">Stock: 36 ml</h5>
       <div class="info">
-        <button class="btn-request">Request</button>
         <button class="btn-view" data-type="equipment"
         data-name="Hydrochloric Acid (99%)"
         data-stock="36 ml"
@@ -289,7 +280,6 @@
     <h5 class="card-text">Ethanol (99%)</h5>
     <h5 class="card-text stock-text">Stock: 36 ml</h5>
     <div class="info">
-      <button class="btn-request">Request</button>
       <button class="btn-view" 
       data-type="chemical"
       data-name="Hydrochloric Acid (99%)"
@@ -307,7 +297,6 @@
     <h5 class="card-text">Ethanol (99%)</h5>
     <h5 class="card-text stock-text">Stock: 36 ml</h5>
     <div class="info">
-      <button class="btn-request">Request</button>
       <button class="btn-view" 
       data-type="equipment"
       data-name="Hydrochloric Acid (99%)"
@@ -384,6 +373,24 @@
     </p>
   </div>
 </footer>
+
+<input type="checkbox" class="nav--checkbox" id="nav-toggle">
+
+<label for="nav-toggle" class="nav--button">
+  <span>&nbsp;</span>
+</label>
+
+<div class="nav--small nav--btn-1">
+  <a href="#"><i class="fa-solid fa-cart-shopping cart-icon"></i></a>
+</div>
+
+<div class="nav--small nav--btn-2">
+  <a href="#"><i class="fa-solid fa-house house-icon"></i></a>
+</div>
+
+<div class="nav--small nav--btn-3">
+  <a href="#"><i class="fa-solid fa-user user-icon"></i></a>
+</div>
     
 </body>
 </html>
