added quantity for equipment user-search

--- a/admin-search.html
+++ b/admin-search.html
@@ -274,6 +274,25 @@
     </p>
   </div>
 </footer>
+
+<input type="checkbox" class="nav--checkbox" id="nav-toggle">
+
+<label for="nav-toggle" class="nav--button">
+  <span>&nbsp;</span>
+</label>
+
+<div class="nav--small nav--btn-1">
+  <a href="#"><i class="fa-solid fa-file-pen"></i></a>
+</div>
+
+<div class="nav--small nav--btn-2">
+  <a href="#"><i class="fa-solid fa-house house-icon"></i></a>
+</div>
+
+<div class="nav--small nav--btn-3">
+  <a href="#"><i class="fa-solid fa-rectangle-list"></i></a>
+</div>
+    
 </body>
 </html>
     
